<resources>
    <string name="app_name">My Life Quran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginText">Please LogIn to see profile and other details. No LogIn means No Rewards</string>
    <string name="write_something_here">write something here</string>
    <string name="bengali_write">এখানে কিছু লিখুন</string>
    <string name="reply_button">Go Drop A Question</string>
    <string name="give_answers_get_rewards">Get Correct Answers Easily</string>
    <string name="_2023_rules">2023 | Rules</string>
    <string name="end_questions">END QUESTIONS :)</string>
    <string name="bannerImage">bannerImage</string>
    <string name="logoImage">logoImage</string>
    <string name="zero">0</string>
    <string name="imageText">Image</string>
    <string name="nameText">Name</string>
    <string name="pointsText">Points</string>
    <string name="correctText">Correct</string>
    <string name="login_page_Text">LOGIN PAGE</string>
    <string name="emailText">Email</string>
    <string name="sampleGmail_com">samplemail@gmail.com</string>
    <string name="phoneText">Phone</string>
    <string name="logText">Login</string>
    <string name="create_account">Create Account</string>
    <string name="_6_digit_password">6 digit password</string>
    <string name="prev">Prev</string>
    <string name="menu">Menu</string>
    <string name="next">Next</string>
    <string name="public_post">Public Post</string>
    <string name="anonymous_post">Anonymous Post</string>
    <string name="what_s_answer_you_want">What\'s answer you want?</string>
    <string name="profileImage">profileImage</string>
    <string name="getting_name">getting name</string>
    <string name="email_fetch_in_process">email fetch in process..</string>
    <string name="reply">REPLY</string>
    <string name="phone">PHONE</string>
    <string name="samplePhone">+91 9XXXX XXXXX</string>
    <string name="points">POINTS</string>
    <string name="check_leader_board">Check Leader Board</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="user_guidelines">User Guidelines</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="doubleZer">00</string>
    <string name="knowledge">Knowledge</string>
    <string name="rewards">Rewards</string>
    <string name="most_recent">Most recent</string>
    <string name="write_your_answer">write your answer</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">Correct Answers</string>
    <string name="earned_coins">Earned Points</string>
    <string name="practice_quiz_has_no_reward">* Practice Quiz Has No Reward</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="register_page">REGISTER PAGE</string>
    <string name="phoneSmallCase">Phone</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="all_rights_reserved">all-rights-reserved</string>
    <string name="click">Click</string>
    <string name="search_any_title">search any title</string>
    <string name="practice_previous_quz_questions">Practice Previous Quz Questions</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="read_offline_quran">Read Offline Quran</string>
    <string name="read_now">Read Now</string>
    <string name="content">content</string>
    <string name="datetime">dateTime</string>
    <string name="sample_date">15 Mar 2023</string>
    <string name="startTime">0:00</string>
    <string name="by_my_life_quran">By My Life Quran</string>
    <string name="practice_set_01">Practice Set 01</string>
    <string name="_30_sec">30 Sec</string>
    <string name="for_each_ques">For Each Ques.</string>
    <string name="reward_10_each">Reward 10 Each</string>
    <string name="start">Start</string>
    <string name="this_is_a_sample_question">This is a sample question</string>
    <string name="replySmallCase">Reply</string>
    <string name="description_text">Description Text</string>
    <string name="click_here">Click Here</string>
    <string name="quran">Quran</string>
    <string name="learning">Learning</string>
    <string name="home">Home</string>
    <string name="dua">Dua</string>
    <string name="practice">Practice</string>
    <string name="back">Back</string>
    <string name="notice">Notice</string>
    <string name="post">POST</string>
    <string name="notifications">Notifications</string>
    <string name="bengali_profile_text">প্রোফাইল</string>
    <string name="bengali_offline_quran_text">হিফজ কোরান</string>
    <string name="bengali_tasbi_text">তসবীহি</string>
    <string name="bengali_quiz_text">কুইজ চ্যাম্পিয়ন</string>
    <string name="bengali_share_app_text">শেয়ার অ্যাপ</string>
    <string name="home2text">অগ্রিম প্রস্তুতি নিন আমাদের লেখা পড়ে</string>
    <string name="home1text">কুইজ খেলুন পুরষ্কার জিতুন</string>
    <string name="hadid_quran">হাদিস ও কোরান</string>
    <string name="view_all">view all</string>
    <string name="hadis1text">নিজের প্রশ্ন জিজ্ঞেস করুন এক নিমিষে</string>
    <string name="get_ultimate_rewards">Get Ultimate Rewards</string>
    <string name="join_now">Join Now</string>
    <string name="hadis2text">বিজ্ঞানের আলোকে ইসলাম</string>
    <string name="hadis3text">একে অপরকে উত্তর দিয়ে সাহায্য করুন</string>
    <string name="bengali_sura">প্রয়োজনীয় সুরাহ</string>
    <string name="quiz">Quiz</string>
    <string name="win_exciting_prize">Win Exciting Prize</string>
    <string name="gain_islamic_knowledge">Gain Islamic Knowledge</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="homeText1">সবসময় আপডেট থাকুন আমাদের সাথে</string>
    <string name="homeText2">জানুন ও লোকেদের জানান</string>
    <string name="kolkata_time">কলকাতা সময় 2023</string>
    <string name="sunset_bengali">সূর্যাস্ত</string>
    <string name="time">00:00</string>
    <string name="sunrise_bengali">সূর্যোদয়</string>
    <string name="Namaz_Somoi_Talika_Bengali">নামাজের সময় তালিকা</string>
    <string name="Fozor">ফজর</string>
    <string name="Johor">জোহর</string>
    <string name="Asor">আসর</string>
    <string name="Magrib">মগরিব</string>
    <string name="Esa">এশা</string>
    <string name="Tahajut">তাহাজ্জুত</string>
    <string name="seheri">সেহেরী</string>
    <string name="iftar">ইফতার</string>
    <string name="facebook">FaceBook</string>
    <string name="youtube">YouTube</string>
    <string name="Namazer_Nisiddho_Somoi">নামাজের নিষিদ্ধ সময়</string>
    <string name="Noon_Bengali">দুপুর</string>
    <string name="Vor">ভোর</string>
    <string name="Sondha">সন্ধ্যা</string>
    <string name="start_bengali">শুরু</string>
    <string name="stop_bengali">শেষ</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="read_more">...Read more</string>
    <string name="list_of_winners_of_last_quiz">Rank of Winners</string>
    <string name="romzan">রমজান</string>
    <string name="poribar">পরিবার</string>
    <string name="osusthota">অসুস্থতা</string>
    <string name="salat">সালাত</string>
    <string name="khaddo">খাদ্যগ্রহন</string>
    <string name="saom">সাওম</string>
    <string name="doinondin">দৈনন্দিন জীবন</string>
    <string name="sokal_sondha">সকাল- সন্ধ্যা যিকির</string>
    <string name="koran_theke">কোরান থেকে</string>
    <string name="bibidh">বিবিধ</string>
    <string name="arbi_date">Arbi Date</string>
    <string name="arbi_month">Arbi Month</string>
    <string name="majhab">majhab</string>
    <string name="give_location_access">Give Location Access</string>
    <string name="location_bangla">লোকেশন দিয়ে সময় জানুন</string>
    <string name="location">Location</string>
    <string name="hanafi_majhab">Hanafi Majhab</string>
    <string name="go_online_to_read">Go Online to Read</string>
    <string name="sorry">Sorry</string>
    <string name="ask_a_question">ask a question...</string>
    <string name="ask_a_question_here">ask a question here</string>
    <string name="donate_something">Donate Something</string>
    <string name="arbiDay">ArbiDay</string>
    <string name="donate">Donate</string>
    <string name="donate_bangla1">সদকায়ে জারিয়া হিসেবে দান করুন।</string>
    <string name="hijri_calender">হিজরি ক্যালেন্ডার</string>
    <string name="help_bangla">সাহায্য করুন</string>
    <string name="donate_as_charity">Donate as charity</string>
    <string name="donate_text">প্রিয় দ্বীনি ভাই ও বোনেরা আপনারা জানেন যে কোনো সংস্থা পরিচালনা করতে গেলে বিভিন্ন খাতে বিপুল পরিমাণে অর্থ ব্যয় হয়, তো তার মধ্যে একটি উল্লেখযোগ্য সংস্থা হচ্ছে My life Quran তো আপনরা আপনাদের মুল্যবান অর্থ দিয়ে আমাদের সহযোগিতা করুন, যাতে করে আমরা আরো বেশি করে আমরা দ্বীনের সেবায় নিয়েজিত থাকতে পারি,, জাজাকুমুল্লাহ</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="save">Save</string>
    <string name="myposts">myPosts</string>
    <string name="feed">Feed</string>
    <string name="answers">Answers</string>
    <string name="reset">Reset</string>
    <string name="convert_to_hijri_date">ইংরেজি তারিখ থেকে আরবি তারিখ</string>
    <string name="select_eng_date">"ইং. তারিখ নির্বাচন করুন "</string>
    <string name="ishraq">ইশরাক</string>
    <string name="tahajjud">তাহাজ্জুদ শেষ</string>
    <string name="choose_category">পছন্দমতো ক্যাটাগরি নির্বাচন করুন</string>
    <string name="Nofol_Namaj">নফল নামাজ সময়</string>
    <string name="submitting_answer_please_wait">উত্তর সাবমিট হচ্ছে ...</string>
    <string name="no_list_found">োনো লিস্ট পাওয়া যায়নি !</string>
    <string name="get_answers_by_expert">Get Answers by Expert</string>
    <string name="arbi_calender_dekhun">আরবি/ হিজরি ক্যালেন্ডার দেখুন</string>
    <string name="included_normal_calender">Included Normal Calender</string>
    <string name="arbiyear">arbiYear</string>


</resources>