<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profileImage"
            android:scaleType="centerCrop"
            android:src="@drawable/uploadprofile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register_page"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/nameText"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:background="@drawable/text_box_bg"
            android:hint="@string/app_name"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/emailText"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_box_bg"
            android:hint="@string/sampleGmail_com"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6_digit_password"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/passwordCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text=""
                android:textColor="@color/white" />
        </LinearLayout>


        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:autofillHints="password"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_box_bg"
            android:hint="@string/_6_digit_password"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phoneSmallCase"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="phone"
            android:background="@drawable/text_box_bg"
            android:hint="@string/samplePhone"
            android:inputType="phone"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_200"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/register"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="already have a account?"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_now"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>