<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/bannerImage"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/practice_set_01"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_30_sec"
                        android:textColor="@color/red"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/questionSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/for_each_ques"
                        android:textColor="@color/blue"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:text="@string/reward_10_each"
                    android:textSize="14sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/playQuiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    app:cardCornerRadius="15dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/blue_700"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start"
                            android:textColor="@color/white"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>