<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:padding="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/placeholder"
            app:civ_border_color="@color/linkBack"
            app:civ_border_width="1dp"/>
        <LinearLayout
            android:id="@+id/writeSomething"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/PP_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:text="@string/nameText"/>
                <ImageView
                    android:id="@+id/remove"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone"
                    android:src="@drawable/delete_forever_24"/>
            </LinearLayout>
            <TextView
                android:id="@+id/PP_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/datetime"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/PP_Post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/this_is_a_sample_question"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/replyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/logoImage"
                android:src="@drawable/chat_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/answers"/>
            <TextView
                android:id="@+id/replyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/logoImage"
                android:src="@drawable/download"/>
            <TextView
                android:id="@+id/saveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/shareBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/logoImage"
                android:src="@drawable/share_outline_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/share"/>
            <TextView
                android:id="@+id/shareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:text="@string/zero"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>