<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingEnd="5dp"
    android:paddingStart="0dp"
    android:layout_marginTop="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/writerImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/placeholder"
            app:civ_border_color="@color/linkBack"
            app:civ_border_width="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:background="@drawable/background_write"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:text="@string/nameText"/>
            <TextView
                android:id="@+id/nameAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/content"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/dateUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:layout_marginTop="2dp"
        android:gravity="center"/>




</LinearLayout>